With groff-1.23.0, mdoc(7) pages without a body produce the same output as with mandoc(1), so drop SKIP_GROFF. While here, also clarify that there are two different reasons for the SKIP_TMAN entries.

--- a/regress/mdoc/Dt/Makefile
+++ b/regress/mdoc/Dt/Makefile
@@ -1,11 +1,9 @@
-# $OpenBSD: Makefile,v 1.9 2025/07/26 12:32:01 schwarze Exp $
+# $OpenBSD: Makefile,v 1.10 2025/07/26 12:46:17 schwarze Exp $
 
 REGRESS_TARGETS	 = badsec case dupe fourargs late
 REGRESS_TARGETS	+= missing noarg nobody nosec order
 LINT_TARGETS	 = badsec case dupe fourargs late
 LINT_TARGETS	+= missing noarg nobody nosec order
-
-SKIP_GROFF	 = nobody
 
 # When the section is missing from the man(7) .TH title line,
 # empty parentheses are shown in the page header.
@@ -14,6 +12,11 @@ SKIP_GROFF	 = nobody
 # Hence, there is no bug-compatible translation from mdoc(7)
 # to man(7) for this case.  That's not mandoc(1)'s fault.
 
-SKIP_TMAN	 = fourargs late missing noarg nosec
+SKIP_TMAN	 = late missing noarg nosec
+
+# The man(7) .TH macro does not support architecture arguments,
+# so machine-dependent manuals cannot be converted faithfully.
+
+SKIP_TMAN	+= fourargs
 
 .include <bsd.regress.mk>
