--- a/regress/mdoc/Dt/Makefile
+++ b/regress/mdoc/Dt/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.10 2025/07/26 12:46:17 schwarze Exp $
+# $OpenBSD: Makefile,v 1.11 2025/07/26 13:39:48 schwarze Exp $
 
 REGRESS_TARGETS	 = badsec case dupe fourargs late
 REGRESS_TARGETS	+= missing noarg nobody nosec order
@@ -18,5 +18,14 @@ SKIP_TMAN	 = late missing noarg nosec
 # so machine-dependent manuals cannot be converted faithfully.
 
 SKIP_TMAN	+= fourargs
+
+# groff-1.23.0 regressions:
+#  - An .Os macro now terminates the prologue, in the sense that the last
+#    .Dt macro before the first .Os macro governs the header, rather than
+#    the last .Dt macro before the first non-prologue macro.
+#  - The footer uses the absolute last .Dt macro, which is inconsistent
+#    with what the header uses.
+
+SKIP_GROFF	 = dupe late order
 
 .include <bsd.regress.mk>
