--- a/regress/roff/esc/Makefile
+++ b/regress/roff/esc/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.23 2022/06/08 13:08:00 schwarze Exp $
+# $OpenBSD: Makefile,v 1.24 2025/07/28 16:39:23 schwarze Exp $
 
 REGRESS_TARGETS	 = one two multi comment
 REGRESS_TARGETS	+= A1 B bs_man bs_mdoc c c_man E1 e f h hneg
@@ -18,5 +18,12 @@ SKIP_GROFF	 = hneg r
 # - mandoc does not inspect the environment
 
 SKIP_GROFF	+= V1
+
+# groff-1.23.0 regressions:
+#  - \A and \w mis-parse an argument resulting from string expansion
+#    or number register expansion; reported at
+#    https://savannah.gnu.org/bugs/index.php?67372
+
+SKIP_GROFF	+= A1 w
 
 .include <bsd.regress.mk>
